--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
+		<dependency>
+	    	<groupId>org.flywaydb</groupId>
+	    	<artifactId>flyway-core</artifactId>
+	    </dependency>
 	</dependencies>
 
 	<build>
