--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 #spring.datasource.hikari.maximum-pool-size=5
 #spring.datasource.hikari.minimum-idle=3
 #spring.datasource.hikari.idle-timeout=10000
+
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
+
+spring.flyway.locations=classpath:db/migration,classpath:db/testdata
